<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_follow"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/title_follow" />

    <item
        android:id="@+id/navigation_comment_list"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/title_comment_list" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_my_page"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_my_page" />
</menu>