<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mvvm_sample.mvvm.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_follow"
        android:name="com.example.mvvm_sample.mvvm.view.FollowFragment"
        android:label="@string/title_follow"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_comment_list"
        android:name="com.example.mvvm_sample.mvvm.view.CommentListFragment"
        android:label="@string/title_comment_list"
        tools:layout="@layout/fragment_comment_list" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.mvvm_sample.mvvm.view.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_my_page"
        android:name="com.example.mvvm_sample.mvvm.view.MyPageFragment"
        android:label="@string/title_my_page"
        tools:layout="@layout/fragment_my_page" />
</navigation>